--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AgroPEST Application</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="title_activity_profile">ProfileActivity</string>
 </resources>
