--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">AgroPEST Application</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
-    <string name="title_activity_profile">ProfileActivity</string
+    <string name="title_activity_profile">ProfileActivity</string>
     <string name="navigation_drawer_open">Open</string>
     <string name="navigation_drawer_close">Close</string>
 </resources>
