--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="available"><![CDATA[Available pesticides & Crop products]]></string>
     <string name="email">Email</string>
     <string name="name">Name</string>
+    <string name="displayQuestion">DisplayQuestion</string>
 </resources>
