--- a/app/src/main/res/values-si/strings.xml
+++ b/app/src/main/res/values-si/strings.xml
@@ -39,6 +39,7 @@
     <string name="available_pesticides_n_amp_price"><![CDATA[ලබා ගත හැකි \n පළිබෝධනාශක සහ \n මිල ගණන්]]></string>
     <string name="if_you_want_to_edit_profile">ඔබට පැතිකඩ සංස්කරණය කිරීමට අවශ්‍ය නම්?</string>
     <string name="edit_your_details">ඔබගේ විස්තර සංස්කරණය කරන්න</string>
+   <string name="edit_your_details_two">පිවිසෙන්න</string>
     <string name="create_account">ගිණුමක් සාදන්න</string>
     <string name="phone_number">දුරකථන අංකය</string>
     <string name="confirm_password">මුරපදය තහවුරු කරන්න</string>
@@ -51,4 +52,5 @@
     <string name="logout">පිටවීම</string>
     <string name="guidelines">මාර්ගෝපදේශ</string>
     <string name="select_language">භාෂාව තෝරන්න</string>
+    <string name="scroll_down_to_see_more">තව බැලීමට පහළට යන්න</string>
 </resources>
