--- a/app/src/main/res/values-si/strings.xml
+++ b/app/src/main/res/values-si/strings.xml
@@ -21,13 +21,13 @@
     <string name="include_details_of_the_out_of_stock_fertiliser">තොග නොමැති පොහොර පිළිබඳ විස්තර ඇතුළත් වේ</string>
     <string name="include_prices_of_the_available_fertiliser">පවතින පොහොර මිල ගණන් ඇතුළත් වේ</string>
     <string name="objectives">අරමුණු</string>
-    <string name="about">කුමක් ගැන ද</string>
+    <string name="about">කුමක් ගැන ද ?</string>
     <string name="agriculture_services_n_locations">කෘෂිකාර්මික සේවා \n ස්ථාන</string>
     <string name="welcome">ආයුබෝවන්!!</string>
     <string name="how_can_agropest_help_you">අපි ඔබට උදව් කරන්නේ කෙසේද?</string>
     <string name="pesticides">පළිබෝධනාශක</string>
     <string name="fertiliser">පොහොර</string>
-    <string name="profile">මගෙ තොරතුරු</string>
+    <string name="profile">මගේ තොරතුරු</string>
     <string name="details_according_to_n_the_crops">භෝග අනුව විස්තර</string>
     <string name="faq">නිති අසන පැණ</string>
     <string name="available_fertilizers_amp_price"><![CDATA[ලබා ගත හැකි පොහොර \nසහ මිල ගණන්]]></string>
@@ -35,7 +35,7 @@
     <string name="sign_in">පුරන්න</string>
     <string name="don_t_have_an_account">ගිණුමක් නොමැතිද?</string>
     <string name="signup">ලියාපදිංචි වන්න</string>
-    <string name="forget_password">මුරපදය අමතකද</string>
+    <string name="forget_password">මුරපදය අමතකද ?</string>
     <string name="available_pesticides_n_amp_price"><![CDATA[ලබා ගත හැකි \n පළිබෝධනාශක සහ \n මිල ගණන්]]></string>
     <string name="if_you_want_to_edit_profile">ඔබට පැතිකඩ සංස්කරණය කිරීමට අවශ්‍ය නම්?</string>
     <string name="edit_your_details">ඔබගේ විස්තර සංස්කරණය කරන්න</string>
@@ -47,7 +47,7 @@
     <string name="existing_user_go_to_sign_in_page">ඔබ දැනට සිටින පරිශීලකයෙක්ද! පුරනය වීමේ පිටුවට යන්න</string>
     <string name="update_profile">සංස්කරණය කරන්න</string>
     <string name="reset_password">මුරපදය නැවත සකසන්න</string>
-    <string name="feedback">ප්රතිපෝෂණ</string>
+    <string name="feedback">ප්‍රතිපෝෂණය</string>
     <string name="communicate">සන්නිවේදනය</string>
     <string name="logout">පිටවීම</string>
     <string name="guidelines">මාර්ගෝපදේශ</string>
